# work-scripts

./: README.md  WklyUpdate.bas  backlog.py  test_a3_copy.xlsx  update_a3.py
RCRAInfo/: eManAPI1.bas
Utilities/: JsonParser.bas
VBA/: emailUsers.bas  metabaseAPI.bas
VBA/Docs/: JsonParser_html.txt
VBA/RCRAInfo/: eManAPI.bas
VBA/Utilities/: tblFilter.bas
domm/: .gitignore  setup.cfg
domm/domm/: __init__.py
