[metadata]
name = domm
version = 0.1.1
author = David Graham
author_email = graham.david@epa.gov
description = domain name matching for generator registration

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    openpyxl

[options.entry_points]
console_scripts =
           domm = domm:main
